--- a/index-demo.html
+++ b/index-demo.html
@@ -29,9 +29,9 @@
 								<li><a href="#first" class="button large wide smooth-scroll-middle">Get Started</a></li>
 							</ul>
 						</div>
-						<div class="image">
-							<img src="images/banner.jpg" alt="" />
-						</div>
+						<!div class="image">
+							<!img src="images/banner.jpg" alt="" />
+						<!/div>
 					</section>
 
 				<!-- Spotlight -->
