--- a/index.html
+++ b/index.html
@@ -30,8 +30,10 @@
 					Astronomy PhD student at
 					<a href="https://physics-astro.gsu.edu/"> Georgia State University</a>
 					unveiling fundamental parameters and activity of
-					<a href="https://ui.adsabs.harvard.edu/abs/2022AAS...24030515H/abstract"> K-dwarfs stars in the
-						Solar Neighborhood </a>.
+					<a href="https://ui.adsabs.harvard.edu/abs/2022AAS...24030515H/abstract"> K-dwarf stars in the
+						Solar Neighborhood </a>. 
+						<a href="http://www.recons.org/"> RECONS</a> member. 
+						Fellow of the CHIRON spectrograph at the 1.5m CTIO/SMARTS telescope.
 				</p>
 				<p>
 					<a href="#about">about me</a>
@@ -53,15 +55,20 @@
 			id="first">
 			<div class="content">
 				<h2>About me</h2>
-				<p> My name is Sebastián. 
-					I am a second year Astronomy PhD students at Georgia State University working with 
-					<a href="http://www.astro.gsu.edu/~thenry/"> Prof. Todd Henry </a> at 
-					<a href="http://www.recons.org/"> RECONS</a>.
-					I grew up in Culiacán, Sin., México, where I also earned my Bachelor degree in Astronomy from 
+				<p> My name is Sebastián.
+					I am a second year Astronomy PhD student at Georgia State University working with
+					<a href="http://www.astro.gsu.edu/~thenry/"> Prof. Todd Henry</a> as part of the
+					<a href="http://www.recons.org/"> RECONS</a> team.
+					<br>
+					I grew up in Culiacán, Sin., México, where I also earned my Bachelor degree in Astronomy from
 					Universidad Autónoma de Sinaloa.
-					Previous from entering a PhD program, I worked three years with Dr. Yilen Gómez-Maqueo at 
-					<a href="https://www.astroscu.unam.mx/IA/index.php?lang=en"> Instituto de Astronomía, UNAM</a>, 
+					Previous from entering a PhD program, I worked three years with Dr. Yilen Gómez-Maqueo at
+					<a href="https://www.astroscu.unam.mx/IA/index.php?lang=en"> Instituto de Astronomía, UNAM</a>,
 					and the <a href="https://www.saintex.unibe.ch/saint_ex/description/"> SAINT-EX Observatory</a>.
+					If you would like to read more about me, please click here for my CV.
+					<br>
+					Outside of academia, I enjoy cooking, digital art/graphic design and listening club music from
+					different scenes around the world.
 				</p>
 				<ul class="actions stacked">
 					<li><a href="#" class="button">Learn More</a></li>
@@ -75,10 +82,13 @@
 		<!-- Three -->
 		<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 			<div class="content">
-				<h2>Tempus adipiscing</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit
-					amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus,
-					pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.</p>
+				<h2>Research</h2>
+				<p> My research focuses in characterizing K-Dwarf stars
+					to uncover fundamental parameters, the frecuency on stellar activity, and how it varies with spectral type and age, by surving the ones existing in the Solar Neighborhood. 
+					This will help for future studies of the habitability of exoplanets around these stars. 
+					Click below for more information on my current and past project.
+				</p>
+					<br>
 				<ul class="actions stacked">
 					<li><a href="#" class="button">Learn More</a></li>
 				</ul>
@@ -91,261 +101,18 @@
 		<!-- Four -->
 		<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
 			<div class="content">
-				<h2>Pharetra etiam nulla</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit
-					amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus,
-					pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.</p>
-				<ul class="actions stacked">
-					<li><a href="#" class="button">Learn More</a></li>
-				</ul>
+				<h2>CHIRON support</h2>
+				<p>
+				I'm a fellow at the CHIRON spectrograph mounted at the SMARTS 1.5 meters telescope in CTIO, Chile.
+				If you want to use CHIRON or want to know more about it, you can contact me or access the 
+				<a href="http://www.astro.gsu.edu/~thenry/SMARTS/CHIRON_FAQ.pdf"> FAQ manual</a>.
+				</p>
 			</div>
 			<div class="image">
 				<img src="images/spotlight03.jpg" alt="" />
 			</div>
 		</section>
 
-		<!-- Five -->
-		<section class="wrapper style1 align-center">
-			<div class="inner">
-				<h2>Massa sed condimentum</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit
-					amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus,
-					pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum.</p>
-			</div>
-
-			<!-- Gallery -->
-			<div class="gallery style2 medium lightbox onscroll-fade-in">
-				<article>
-					<a href="images/gallery/fulls/01.jpg" class="image">
-						<img src="images/gallery/thumbs/01.jpg" alt="" />
-					</a>
-					<div class="caption">
-						<h3>Ipsum Dolor</h3>
-						<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-						<ul class="actions fixed">
-							<li><span class="button small">Details</span></li>
-						</ul>
-					</div>
-				</article>
-				<article>
-					<a href="images/gallery/fulls/02.jpg" class="image">
-						<img src="images/gallery/thumbs/02.jpg" alt="" />
-					</a>
-					<div class="caption">
-						<h3>Feugiat Lorem</h3>
-						<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-						<ul class="actions fixed">
-							<li><span class="button small">Details</span></li>
-						</ul>
-					</div>
-				</article>
-				<article>
-					<a href="images/gallery/fulls/03.jpg" class="image">
-						<img src="images/gallery/thumbs/03.jpg" alt="" />
-					</a>
-					<div class="caption">
-						<h3>Magna Amet</h3>
-						<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-						<ul class="actions fixed">
-							<li><span class="button small">Details</span></li>
-						</ul>
-					</div>
-				</article>
-				<article>
-					<a href="images/gallery/fulls/04.jpg" class="image">
-						<img src="images/gallery/thumbs/04.jpg" alt="" />
-					</a>
-					<div class="caption">
-						<h3>Sed Tempus</h3>
-						<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-						<ul class="actions fixed">
-							<li><span class="button small">Details</span></li>
-						</ul>
-					</div>
-				</article>
-				<article>
-					<a href="images/gallery/fulls/05.jpg" class="image">
-						<img src="images/gallery/thumbs/05.jpg" alt="" />
-					</a>
-					<div class="caption">
-						<h3>Ultrices Magna</h3>
-						<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-						<ul class="actions fixed">
-							<li><span class="button small">Details</span></li>
-						</ul>
-					</div>
-				</article>
-				<article>
-					<a href="images/gallery/fulls/06.jpg" class="image">
-						<img src="images/gallery/thumbs/06.jpg" alt="" />
-					</a>
-					<div class="caption">
-						<h3>Sed Tempus</h3>
-						<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-						<ul class="actions fixed">
-							<li><span class="button small">Details</span></li>
-						</ul>
-					</div>
-				</article>
-				<article>
-					<a href="images/gallery/fulls/07.jpg" class="image">
-						<img src="images/gallery/thumbs/07.jpg" alt="" />
-					</a>
-					<div class="caption">
-						<h3>Ipsum Lorem</h3>
-						<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-						<ul class="actions fixed">
-							<li><span class="button small">Details</span></li>
-						</ul>
-					</div>
-				</article>
-				<article>
-					<a href="images/gallery/fulls/08.jpg" class="image">
-						<img src="images/gallery/thumbs/08.jpg" alt="" />
-					</a>
-					<div class="caption">
-						<h3>Magna Risus</h3>
-						<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-						<ul class="actions fixed">
-							<li><span class="button small">Details</span></li>
-						</ul>
-					</div>
-				</article>
-				<article>
-					<a href="images/gallery/fulls/09.jpg" class="image">
-						<img src="images/gallery/thumbs/09.jpg" alt="" />
-					</a>
-					<div class="caption">
-						<h3>Tempus Dolor</h3>
-						<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-						<ul class="actions fixed">
-							<li><span class="button small">Details</span></li>
-						</ul>
-					</div>
-				</article>
-				<article>
-					<a href="images/gallery/fulls/10.jpg" class="image">
-						<img src="images/gallery/thumbs/10.jpg" alt="" />
-					</a>
-					<div class="caption">
-						<h3>Sed Etiam</h3>
-						<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-						<ul class="actions fixed">
-							<li><span class="button small">Details</span></li>
-						</ul>
-					</div>
-				</article>
-				<article>
-					<a href="images/gallery/fulls/11.jpg" class="image">
-						<img src="images/gallery/thumbs/11.jpg" alt="" />
-					</a>
-					<div class="caption">
-						<h3>Magna Lorem</h3>
-						<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-						<ul class="actions fixed">
-							<li><span class="button small">Details</span></li>
-						</ul>
-					</div>
-				</article>
-				<article>
-					<a href="images/gallery/fulls/12.jpg" class="image">
-						<img src="images/gallery/thumbs/12.jpg" alt="" />
-					</a>
-					<div class="caption">
-						<h3>Ipsum Dolor</h3>
-						<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-						<ul class="actions fixed">
-							<li><span class="button small">Details</span></li>
-						</ul>
-					</div>
-				</article>
-			</div>
-
-		</section>
-
-		<!-- Six -->
-		<section class="wrapper style1 align-center">
-			<div class="inner">
-				<h2>Ipsum sed consequat</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit
-					amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus,
-					pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum.</p>
-				<div class="items style1 medium onscroll-fade-in">
-					<section>
-						<span class="icon style2 major fa-gem"></span>
-						<h3>Lorem</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci
-							amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-					</section>
-					<section>
-						<span class="icon solid style2 major fa-save"></span>
-						<h3>Ipsum</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci
-							amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-					</section>
-					<section>
-						<span class="icon solid style2 major fa-chart-bar"></span>
-						<h3>Dolor</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci
-							amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-					</section>
-					<section>
-						<span class="icon solid style2 major fa-wifi"></span>
-						<h3>Amet</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci
-							amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-					</section>
-					<section>
-						<span class="icon solid style2 major fa-cog"></span>
-						<h3>Magna</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci
-							amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-					</section>
-					<section>
-						<span class="icon style2 major fa-paper-plane"></span>
-						<h3>Tempus</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci
-							amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-					</section>
-					<section>
-						<span class="icon solid style2 major fa-desktop"></span>
-						<h3>Aliquam</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci
-							amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-					</section>
-					<section>
-						<span class="icon solid style2 major fa-sync-alt"></span>
-						<h3>Elit</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci
-							amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-					</section>
-					<section>
-						<span class="icon solid style2 major fa-hashtag"></span>
-						<h3>Morbi</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci
-							amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-					</section>
-					<section>
-						<span class="icon solid style2 major fa-bolt"></span>
-						<h3>Turpis</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci
-							amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-					</section>
-					<section>
-						<span class="icon solid style2 major fa-envelope"></span>
-						<h3>Ultrices</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci
-							amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-					</section>
-					<section>
-						<span class="icon solid style2 major fa-leaf"></span>
-						<h3>Risus</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci
-							amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-					</section>
-				</div>
-			</div>
-		</section>
 
 		<!-- Seven -->
 		<section class="wrapper style1 align-center">
