--- a/index.html
+++ b/index.html
@@ -45,9 +45,20 @@
 					<li><a href="#first" class="button big wide smooth-scroll-middle">Get Started</a></li>
 				</ul>
 			</div>
+			<!-- 
 			<div class="image">
 				<img src="images/banner.jpg" alt="" />
 			</div>
+			<!-- The video -->
+			<video autoplay muted loop id="myVideo">
+				<source src="videos/covers/STG_flash_square.mp4" type="video/mp4">
+			</video>
+			<!-- RECONS
+				SMARTS
+				CTIO 1.5M
+				CHIRON
+				RKSTARS
+				-->
 		</section>
 
 		<!-- Two -->
@@ -113,50 +124,40 @@
 			</div>
 		</section>
 
-
+		
 		<!-- Seven -->
+		
 		<section class="wrapper style1 align-center">
 			<div class="inner medium">
 				<h2>Get in touch</h2>
-				<form method="post" action="#">
-					<div class="fields">
-						<div class="field half">
-							<label for="name">Name</label>
-							<input type="text" name="name" id="name" value="" />
-						</div>
-						<div class="field half">
-							<label for="email">Email</label>
-							<input type="email" name="email" id="email" value="" />
-						</div>
-						<div class="field">
-							<label for="message">Message</label>
-							<textarea name="message" id="message" rows="6"></textarea>
-						</div>
-					</div>
-					<ul class="actions special">
-						<li><input type="submit" name="submit" id="submit" value="Send Message" /></li>
-					</ul>
-				</form>
-
 			</div>
-		</section>
-
+			<div class="content">
+				<p>
+					If you have any question would like to get in touch, feel free to contact me!
+					<br>
+					E-mail me clicking <a href="mailto:jcarrazcogaxiola1@gsu.edu"> here</a>.
+					
+				</p>
+			</div>
+	 
 		<!-- Footer -->
 		<footer class="wrapper style1 align-center">
 			<div class="inner">
 				<ul class="icons">
+					<li><a href="https://github.com/astrosebas/" class="icon brands style2 fa-github"><span class="label">Github</span></a></li>
+					<li><a href="https://www.instagram.com/stellarsebas/" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a>
+					</li>
+					<!--
 					<li><a href="#" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
-					<li><a href="#" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a>
-					</li>
-					<li><a href="#" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a>
-					</li>
 					<li><a href="#" class="icon brands style2 fa-linkedin-in"><span class="label">LinkedIn</span></a>
 					</li>
-					<li><a href="#" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
+					-->
+					<li><a href="mailto:jcarrazcogaxiola1@gsu.edu" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
 				</ul>
-				<p>&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+				<p>&copy; Sebastián Carrazco-Gaxiola. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 			</div>
 		</footer>
+	</section>
 
 	</div>
 
