Final draft. Photos needed

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		<section
 			class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 			<div class="content">
-				<h1>Sebastián Carrazco-Gaxiola</h1>
+				<h1>Sebastián Carrazco Gaxiola</h1>
 				<p class="major">
 					Astronomy PhD student at
 					<a href="https://physics-astro.gsu.edu/"> Georgia State University</a>
@@ -45,20 +45,21 @@
 					<li><a href="#first" class="button big wide smooth-scroll-middle">Get Started</a></li>
 				</ul>
 			</div>
-			<!-- 
+			 
 			<div class="image">
 				<img src="images/banner.jpg" alt="" />
 			</div>
-			<!-- The video -->
+			<!-- The video 
 			<video autoplay muted loop id="myVideo">
 				<source src="videos/covers/STG_flash_square.mp4" type="video/mp4">
 			</video>
+			-->
 			<!-- RECONS
 				SMARTS
 				CTIO 1.5M
 				CHIRON
 				RKSTARS
-				-->
+			-->
 		</section>
 
 		<!-- Two -->
@@ -67,27 +68,31 @@
 			<div class="content">
 				<h2>About me</h2>
 				<p> My name is Sebastián.
-					I am a second year Astronomy PhD student at Georgia State University working with
+					I grew up in Culiacán, Sin., México, where I also earned my Bachelor degree in Astronomy from
+					Universidad Autónoma de Sinaloa.
+					I am an Astronomy PhD student at Georgia State University working with
 					<a href="http://www.astro.gsu.edu/~thenry/"> Prof. Todd Henry</a> as part of the
 					<a href="http://www.recons.org/"> RECONS</a> team.
 					<br>
-					I grew up in Culiacán, Sin., México, where I also earned my Bachelor degree in Astronomy from
-					Universidad Autónoma de Sinaloa.
 					Previous from entering a PhD program, I worked three years with Dr. Yilen Gómez-Maqueo at
 					<a href="https://www.astroscu.unam.mx/IA/index.php?lang=en"> Instituto de Astronomía, UNAM</a>,
 					and the <a href="https://www.saintex.unibe.ch/saint_ex/description/"> SAINT-EX Observatory</a>.
-					If you would like to read more about me, please click here for my CV.
 					<br>
 					Outside of academia, I enjoy cooking, digital art/graphic design and listening club music from
 					different scenes around the world.
+					<br>
+					If you would like to read more about me, please click here for my CV.
+
 				</p>
 				<ul class="actions stacked">
 					<li><a href="#" class="button">Learn More</a></li>
 				</ul>
 			</div>
+			 
 			<div class="image">
 				<img src="images/spotlight01.jpg" alt="" />
 			</div>
+		
 		</section>
 
 		<!-- Three -->
