cv and links fixed

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 				<p>
 					<a href="#about">about me</a>
 					// <a href="#research">research</a>
-					// <a href="docs/CV.pdf">cv</a>
+					// <a href="docs/CV_updated_202302.pdf">cv</a>
 					// <a href="#contact">contact</a>
 				</p>
 				<ul class="actions stacked">
@@ -65,7 +65,7 @@
 		<!-- Two -->
 		<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in"
 			id="first">
-			<div class="content">
+			<div class="content" id="about">
 				<h2>About me</h2>
 				<p> My name is Sebastián.
 					I grew up in Culiacán, Sin., México, where I also earned my Bachelor degree in Astronomy from
@@ -97,7 +97,7 @@
 
 		<!-- Three -->
 		<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
-			<div class="content">
+			<div class="content" id="research">
 				<h2>Research</h2>
 				<p> My research focuses in characterizing K-Dwarf stars
 					to uncover fundamental parameters, the frecuency on stellar activity, and how it varies with spectral type and age, by surving the ones existing in the Solar Neighborhood. 
@@ -116,7 +116,7 @@
 
 		<!-- Four -->
 		<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
-			<div class="content">
+			<div class="content" id="chiron">
 				<h2>CHIRON support</h2>
 				<p>
 				I'm a fellow at the CHIRON spectrograph mounted at the SMARTS 1.5 meters telescope in CTIO, Chile.
@@ -133,7 +133,7 @@
 		<!-- Seven -->
 		
 		<section class="wrapper style1 align-center">
-			<div class="inner medium">
+			<div class="inner medium" id="contact">
 				<h2>Get in touch</h2>
 			</div>
 			<div class="content">
