--- a/index.html
+++ b/index.html
@@ -74,14 +74,14 @@
 					<a href="http://www.astro.gsu.edu/~thenry/"> Prof. Todd Henry</a> as part of the
 					<a href="http://www.recons.org/"> RECONS</a> team.
 					<br>
-					Previous from entering a PhD program, I worked three years with Dr. Yilen Gómez-Maqueo at
+					Previous from entering a PhD program, I worked three years with Prof. Yilen Gómez-Maqueo Chew at
 					<a href="https://www.astroscu.unam.mx/IA/index.php?lang=en"> Instituto de Astronomía, UNAM</a>,
 					and the <a href="https://www.saintex.unibe.ch/saint_ex/description/"> SAINT-EX Observatory</a>.
 					<br>
 					Outside of academia, I enjoy cooking, digital art/graphic design and listening club music from
 					different scenes around the world.
 					<br>
-					If you would like to read more about me, please click here for my CV.
+					If you would like to read more about me, please click here for my <a href="docs/CV_updated_202302.pdf">	CV</a>.
 
 				</p>
 				<ul class="actions stacked">
